  removed. Nodes will recover their unassigned local primary shards
  immediatelly after restart.

- The `_node` column on `sys.shards` and `sys.operations` has been renamed to
  `node`, is now visible by default and has been trimmed to only include
  `node['id']` and `node['name']`. In order to get all information a join query
  can be used with `sys.nodes`.

Changes
=======

- Added support for ordering on analysed or partitioned columns.

- Changed the primary key constraints of the information schema tables
  ``table_constraints``, ``referential_constraints``, ``table_partitions``,
  ``key_column_usage``, ``columns``, and ``tables`` to be SQL compliant.

- Fixed path of logfile name in rotation pattern in ``log4j2.properties``. It
  now writes into the correct logging directory instead of the parent
  directory.

- Added support for views which can be created using the new ``CREATE VIEW``
  statement and dropped using the ``DROP VIEW`` statement. Views are listed in
  ``information_schema.views`` and they show up in
  ``information_schema.tables`` as well as ``information_schema.columns``.

- Enterprise: Added the VIEW privilege class which can be used to grant/deny
  access to views.

- Added support for ``INSERT INTO ... ON CONFLICT DO NOTHING``. The statement
  ignores insert values which would cause duplicate keys.

- Arrays can now contain mixed types if they're safely convertible. JSON
  libraries tend to encode values like ``[ 0.0, 1.2]`` as ``[ 0, 1.2 ]``, this
  caused an error because of the strict type match we enforced before.

- DEPRECATED: The ``ON DUPLICATE KEY UPDATE`` clause has been deprecated in
  favor of the ``ON CONFLICT DO UPDATE SET`` clause.

- Added support for ON CONFLICT clause in insert statements.
  ``INSERT INTO ... ON CONFLICT (pk_col) DO UPDATE SET col = val`` is identical
  to ``INSERT INTO ... ON DUPLICATE KEY UPDATE col = val``.
  The special EXCLUDED table can be used to refer to the insert values: